--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </div>
 </div>
 </div>
-            
+<div class="btnreturn">
+    <a href="#"> <i class="fa-solid fa-up"> </i></a>
+</div>            
 
 <!------------ABOUT---------------------------->
 <div id="about">
