--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <script src="https://kit.fontawesome.com/92cde7fc6f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id ="header">      
+    <div id ="header">             
 <div class="container">
     <nav>
         <img src="images/cdplogo.png" class="logo">
     <ul id="sidemenu">
-        <li><a href="#header">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Basic Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="test.html">Submission Checker</a></li>
+        <li><a href="#header">HOME</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#services">BASIC SERVICES</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="test.html">SUBMISSION CHECKER</a></li>  
         <i class="fas fa-times" onclick="closemenu()"></i>
     </ul>
     <i class="fas fa-bars" onclick="openmenu()"></i> 
@@ -31,9 +31,6 @@
     </div>
 </div>
 </div>
-<div class="btnreturn">
-    <a href="#"> <i class="fa-solid fa-up"> </i></a>
-</div>            
 
 <!------------ABOUT---------------------------->
 <div id="about">
@@ -104,8 +101,9 @@
             <div>
                 <i class="fa-solid fa-robot"></i>
                 <h2>Gunpla Services</h2>
-                <p>This service will be provided for people who struggles
-                    in Video Editing.</p>
+                <p>This service will be provided for people who doesn't have
+                    the luxury of time to customize their kits.
+                </p>
                 <a href="#">Learn more</a>   
             </div>
         </div>
@@ -117,20 +115,21 @@
         <h1 class="sub-title">My Work</h1>  
         <div class="work-list">
             <div class="work">
-                <img src="images/gunpla.png">
+                <img src="images/ccpp.png">
                 <div class="layer">
-                    <h3>Gundam Builds</h3>
-                    <p>This section shows you all of the Gundam kits that
-                        I've built over the years.</p>
+                    <h3>C / C++ & Java Language Codes </h3>
+                    <p>This section shows you all of my past codes that
+                        I've learned over the years.</p>
                     <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/technical.png">
                 <div class="layer">
-                    <h3>Technical Tinkering</h3>
-                    <p>This section shows some of the technical repairs,
-                        conversions, tinkering and more.</p>
+                    <h3>Wired to Wireless Headphones</h3>
+                    <p>This section shows some of the photos of said
+                        converted headphones.
+                    </p>
                     <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
@@ -155,7 +154,7 @@
         <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
             <p><i class="fa-solid fa-paper-plane"></i>deguzmanmarkfrancisp@gmail.com</p>
-            <p><i class="fa-solid fa-square-phone"></i>09568014944</p>
+            <p><i class="fa-solid fa-square-phone"></i>0123456789</p>
             <div class="social-icons">
                 <a href="https://www.facebook.com/siopao.mark/"><i class="fa-brands fa-square-facebook"></i></a>
                 <a href="https://github.com/markgg33"><i class="fa-brands fa-square-github"></i></a>
