--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
     <title>Submission Checker</title>
     <link rel="icon" type="image/x-icon" href="images/cdplogo.ico">
     <link rel="stylesheet" href="second.css">
+    <script src="https://kit.fontawesome.com/92cde7fc6f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id ="header1">
@@ -22,12 +23,12 @@
             </ul>
             </nav>
         <div class="header-title">
-            <h1><span>CDP </span>SUBMISSION CHECKER</h1>
+            <h1><span>CDP<br></span>SUBMISSION<br>CHECKER</h1>
             <p><span class="spred">NOTE: </span> NOT THE FINAL BUILD (STILL WORKING
             ON THE <span class="spgreen">CODES </span>  AND <span class="spgreen"> LOGIC</span>) </p>
         </div>
     </div>
-    </div>   
+    </div>
     <div class="copyright">
         <p>Copyright © Mark. Made with by CD Productions 2022</p>
         </div> 
