--- a/test.html
+++ b/test.html
@@ -15,11 +15,11 @@
             <nav>
                 <img src="images/cdplogo.png" class="logo1">
             <ul id="sidemenu1">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="#services">Basic Services</a></li>
-                <li><a href="index.html#portfolio">Portfolio</a></li>
-                <li><a href="#">Submission Checker</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="index.html#about">ABOUT</a></li>
+                <li><a href="#services">BASIC SERVICES</a></li>
+                <li><a href="index.html#portfolio">PORTFOLIO</a></li>
+                <li><a href="#">SUBMISSION CHECKER</a></li>
             </ul>
             </nav>
         <div class="header-title">
