--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <div class="services-list">
             <div>
                 <i class="fa-solid fa-video"></i>
-                <h2>Video Editing / Videography</h2>
+                <h2>Videography</h2>
                 <p>This service will be provided for people who struggles
-                    in Video Editing.</p>
+                    in Video Editing and anything video related.</p>
                 <a href="#">Learn more</a>   
             </div>
             <div>
