--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     </div>
 </div>
 </div>
+    <div class="arrow-btn">
+    <a href="#"><span class="fas fa-angle-up"></span></a>
+</div>
 
 <!------------ABOUT---------------------------->
 <div id="about">
