--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
     <i class="fas fa-bars" onclick="openmenu()"></i> 
     </nav>
     <div class="header-text">
-        <p>From the <span> SJB Kalentong Branch</span> </p>
+        <p>From <span> SJB Kalentong Branch</span> </p>
         <h1> Hi, I'm Mark Francis <br> De Guzman, <br> First Year <span> IT Student </span>  </h1>
     </div>
 </div>
 </div>
-    <div class="arrow-btn">
-    <a href="#"><span class="fas fa-angle-up"></span></a>
+<div class="arrow-btn">
+    <a href="#"><i class="fas fa-angle-up"></i></a>
 </div>
+
+
 
 <!------------ABOUT---------------------------->
 <div id="about">
@@ -88,9 +90,9 @@
         <div class="services-list">
             <div>
                 <i class="fa-solid fa-video"></i>
-                <h2>Videography</h2>
+                <h2>Video Editing / Videography</h2>
                 <p>This service will be provided for people who struggles
-                    in Video Editing and anything video related.</p>
+                    in Video Editing.</p>
                 <a href="#">Learn more</a>   
             </div>
             <div>
@@ -123,7 +125,7 @@
                     <h3>C / C++ & Java Language Codes </h3>
                     <p>This section shows you all of my past codes that
                         I've learned over the years.</p>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <a href="cppjava.html"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -133,7 +135,7 @@
                     <p>This section shows some of the photos of said
                         converted headphones.
                     </p>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <a href="wireless.html"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -179,6 +181,7 @@
 <p>Copyright © Mark. Made with by CD Productions 2022</p>
 </div>
 </div>
+
 <script>
 
 var tablinks = document.getElementsByClassName("tab-links")
