--- a/cppjava.html
+++ b/cppjava.html
@@ -31,6 +31,35 @@
         </div>
         </div>
 
+        <!----------------codes--------------->
+
+        <div id="codescpp">
+            <div class="containercodes">
+                <h1 class="sub-titlecpp"><span>SAMPLE CODES </span><br>IN PACKAGES</h1>
+                <div class="codes-list">
+                    <div class="codes">
+                        <img src="images/cpphorizontal.png">
+                        <div class="codelayer">
+                            <h3>C and C++ Simple Codes</h3>
+                            <p>In this section, you can download sample codes of c and cpp language.</p>
+                            <p>This package includes: Grade Identifier, Letter Identifier.</p>
+                            <a href="C Cpp Java Codes/C and Cpp Codes/Grade and Letter Package.rar" src="C Cpp Java Codes/C and Cpp Codes/Grade and Letter Package.rar"download><i class="fa-solid fa-download"></i></i></a>
+                        </div>
+                    </div>
+                        <div class="codes">
+                            <img src="images/javahorizontal.png">
+                            <div class="codelayer">
+                                <h3>Java Simple Codes</h3>
+                                <p>In this section, you can download sample codes of Java language.</p>
+                                <p>This package includes: OOP related codes(SETTER AND GETTER, INHERITANCE, OVERRIDE, ABSTRACT, INTERFACE) 
+                                    about Polygons, Trigonometric Functions, Area of a Triangle and more.</p>
+                                <a href="C Cpp Java Codes/Java Codes/" src="C Cpp Java Codes/C and Cpp Codes/Grade and Letter Package.rar"download><i class="fa-solid fa-download"></i></i></a>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="arrow-btn">
             <a href="#"><i class="fas fa-angle-up"></i></a>
         </div>
