--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
             <ul id="sidemenu1">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="index.html#about">ABOUT</a></li>
-                <li><a href="#services">BASIC SERVICES</a></li>
+                <li><a href="index.html#services">BASIC SERVICES</a></li>
                 <li><a href="index.html#portfolio">PORTFOLIO</a></li>
                 <li><a href="#">SUBMISSION CHECKER</a></li>
                 <i class="fas fa-times" onclick="closemenu()"></i>
