--- a/wireless.html
+++ b/wireless.html
@@ -9,7 +9,14 @@
     <link rel="stylesheet" href="wireless.css">
 </head>
 <body>
-    
+    <div id ="wirelessheader">
+        <div class="wirelesscontainer">
+
+            <h1>THIS PAGE WILL BE FOR THE WIRED TO WIRELESS HEADSET PROMOTION</h1>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
