--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <a href="CDP Submission Checker/CDP Submission Checker.rar" src="CDP Submission Checker/CDP Submission Checker.rar" class="btnnew" download>Download</a>
+    <a href="SJB Submission Checker/SJB Submission Checker.rar" src="SJB Submission Checker/SJB Submission Checker.rar" class="btnnew" download>Download</a>
 
 
   <!-------------------contact----------------->
