--- a/test.html
+++ b/test.html
@@ -65,7 +65,7 @@
   </div>   
 </div>
 <div class="btnsplit">
-    <a href="SJB Submission Checker/CDP Submission Checker.rar" src="CDP Submission Checker/CDP Submission Checker.rar" class="btnnew" download>Download</a>
+    <a href="CDP Submission Checker/CDP Submission Checker.rar" src="CDP Submission Checker/CDP Submission Checker.rar" class="btnnew" download>Download</a>
     <a href="Documentation.pdf" src="Documentation.pdf" class="btndoc" download>CDP Documentation 2022</a>
 </div>
     
